--- a/package.json
+++ b/package.json
@@ -7,12 +7,33 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "yarn lint:eslint && yarn lint:prettier",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier . --check",
+    "lint:fix": "eslint . --fix && prettier --write --list-different ."
   },
   "dependencies": {
+    "@iconify-json/solar": "^1.2.2",
+    "@nuxt/eslint": "0.7.4",
+    "@nuxtjs/tailwindcss": "6.12.2",
+    "@pinia/nuxt": "0.9.0",
+    "@vueuse/core": "^12.3.0",
+    "eslint": "^8.57.0 || ^9.0.0",
+    "fabric": "^6.5.4",
     "nuxt": "^3.15.0",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "devDependencies": {
+    "@egoist/tailwindcss-icons": "^1.8.2",
+    "@iconify-json/lineicons": "^1.2.4",
+    "@iconify-json/ph": "^1.2.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2"
+  }
 }
