--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.2",
     "@iconify-json/lineicons": "^1.2.4",
+    "@iconify-json/mdi": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
     "@types/uuid": "^10.0.0",
     "eslint-config-prettier": "^9.1.0",
