--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/eslint": "0.7.4",
     "@nuxtjs/tailwindcss": "6.12.2",
     "@pinia/nuxt": "0.9.0",
+    "@vueuse/components": "^12.4.0",
     "@vueuse/core": "^12.3.0",
     "eslint": "^8.57.0 || ^9.0.0",
     "fabric": "^6.5.4",
@@ -37,6 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.4.2",
+    "sass-embedded": "^1.83.1",
     "typescript": "^5.7.2"
   }
 }
