--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier . --check",
-    "lint:fix": "eslint . --fix && prettier --write --list-different ."
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@iconify-json/solar": "^1.2.2",
     "@nuxt/eslint": "0.7.4",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "6.12.2",
     "@pinia/nuxt": "0.9.0",
+    "@radix-icons/vue": "^1.0.0",
     "@vueuse/components": "^12.4.0",
     "@vueuse/core": "^12.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^8.57.0 || ^9.0.0",
     "fabric": "^6.5.4",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
+    "radix-vue": "^1.9.12",
+    "shadcn-nuxt": "0.11.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
     "vue": "latest",
     "vue-router": "latest"
