--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "eslint": "^8.57.0 || ^9.0.0",
     "fabric": "^6.5.4",
+    "lucide-vue-next": "^0.471.0",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
     "radix-vue": "^1.9.12",
