--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/components": "^12.4.0",
     "@vueuse/core": "^12.3.0",
+    "@vueuse/motion": "^2.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^8.57.0 || ^9.0.0",
