--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@iconify-json/lineicons": "^1.2.4",
     "@iconify-json/mdi": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
+    "@types/fontfaceobserver": "^2.1.3",
     "@types/uuid": "^10.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "fontfaceobserver": "^2.3.0",
     "prettier": "^3.4.2",
     "sass-embedded": "^1.83.1",
     "typescript": "^5.7.2"
